# Gemma4-Hackathon-ShangHai

submissions/2026/track_B/Gemma4-Hackathon-ShangHai/submissions/2026/B/Gemma4-Traffic-Liability-Assistant/: pyproject.toml
submissions/2026/track_B/Gemma4-Hackathon-ShangHai/submissions/2026/B/Gemma4-Traffic-Liability-Assistant/src/gemma4_liability_assistant/: __init__.py  model.py  pipeline.py  tools.py
submissions/2026/track_B/gemma4-traffic-liability-assistant/: README.md  requirements.txt
submissions/2026/track_B/gemma4-traffic-liability-assistant/docs/: technical-report.md
submissions/2026/track_B/gemma4-traffic-liability-assistant/examples/: run_case.py
submissions/2026/track_B/gemma4-traffic-liability-assistant/src/gemma4_liability_assistant/: schemas.py
submissions/2026/track_B/gemma4-traffic-liability-assistant/tests/: test_tool_calls.py
